# talks

./: README.md
2022-07-20-parser-combinators/: README.md
2022-07-20-parser-combinators/code/: parser-combinators-from-scratch.cabal
2022-07-20-parser-combinators/code/src/: JSON.hs  Main.hs  Parser.hs
2022-07-20-parser-combinators/slides/: Slides.html  Slides.md
2023-12-11-wasm-hs/: README.md
2023-12-11-wasm-hs/slides/: Slides.html  Slides.md  build.sh
2023-12-11-wasm-hs/slides/assets/: WasmHaskell.xcf
2024-01-05-wasm-hs/: README.md
2024-01-05-wasm-hs/slides/: Slides.html  Slides.md
code/: .hlint.yaml  JSON.hs  Main.hs  Parser.hs
slides/: Slides.html  Slides.md
