cabal-version: 3.0

name: parser-combinators-from-scratch
version: 0.0.0.0
build-type: Simple

executable parser-combinators-from-scratch
  default-language: Haskell2010

  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    JSON
    Parser

  build-depends:
    base >=4.16 && <5
    , transformers ^>= 0.6
    , containers ^>= 0.6
